crates/pardosa-genome/tests/compile_fail/union_type.stderr
error: GenomeSafe cannot be derived for unions
 --> tests/compile_fail/union_type.rs:4:7
  |
4 | union Bad {
  |       ^^^
